-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Testing testEq01_1(java.lang.Object@237b6c6e, null)# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/ciStreams.cpp:339
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/localhome/davids/hotspot/valhalla_sync_branches/open/src/hotspot/share/ci/ciStreams.cpp:339), pid=25060, tid=25073
# Error: ShouldNotReachHere()
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (slowdebug build 13-lworldea+0-2019-01-31-0927445.davids.null)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 13-lworldea+0-2019-01-31-0927445.davids.null, mixed mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x789eb2] ciBytecodeStream::get_method_index()+0x2c
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1/core.25060)
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1/hs_err_pid25060.log
#
# Compiler replay data is saved as:
# /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1/replay_pid25060.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 25073
Dumping core ...
STDERR:
rerun:
cd /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1 && \
DISPLAY=:1 \
GNOME_DESKTOP_SESSION_ID=this-is-deprecated \
HOME=/home/davids \
JDK8_HOME=/var/tmp/jib-davids/install/jdk/11/28/bundles/linux-x64/jdk-11_linux-x64_bin.tar.gz/jdk-11 \
JIB_HOME=/var/tmp/jib-davids/install/com/oracle/java/jib/jib/3.0-SNAPSHOT/jib-3.0-SNAPSHOT-distribution.zip/jib-3.0-SNAPSHOT-distribution \
LANG=en_AU.UTF-8 \
PATH=/bin:/usr/bin \
TEST_IMAGE_GRAAL_DIR=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/test/hotspot/jtreg/graal \
XMODIFIERS=@im=ibus \
CLASSPATH=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/open/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg:/var/tmp/jib-davids/install/java/re/jtreg/4.2/promoted/all/b13/bundles/jtreg_bin-4.2.zip/jtreg/lib/javatest.jar:/var/tmp/jib-davids/install/java/re/jtreg/4.2/promoted/all/b13/bundles/jtreg_bin-4.2.zip/jtreg/lib/jtreg.jar \
/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/jdk/bin/java \
-Dtest.class.path.prefix=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3 \
-Dtest.src=/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes \
-Dtest.src.path=/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/open/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg \
-Dtest.classes=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d \
-Dtest.class.path=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3 \
-Dtest.vm.opts=-XX:MaxRAMPercentage=1 \
-Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=1 \
-Dtest.compiler.opts= \
-Dtest.java.opts= \
-Dtest.jdk=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/jdk \
-Dcompile.jdk=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/jdk \
-Dtest.timeout.factor=4.0 \
-Dtest.nativepath=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/test/hotspot/jtreg/native \
-XX:MaxRAMPercentage=1 \
-Djava.library.path=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/test/hotspot/jtreg/native \
-Xbootclasspath/a:. \
-XX:+UnlockDiagnosticVMOptions \
-XX:+WhiteBoxAPI \
-Xbatch \
-XX:+EnableValhalla \
-XX:TypeProfileLevel=222 \
-XX:+UnlockExperimentalVMOptions \
-XX:ACmpOnValues=3 \
-XX:CompileCommand=dontinline,compiler.valhalla.valuetypes.TestNewAcmp::test* \
-XX:CompileCommand=dontinline,compiler.valhalla.valuetypes.TestNewAcmp::cmp* \
com.sun.javatest.regtest.agent.MainWrapper /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/compiler/valhalla/valuetypes/TestNewAcmp.d/main.6.jta 0
TEST RESULT: Failed. Unexpected exit from test [exit code: 134]
# after -XX: or in .hotspotrc: SuppressErrorAt=/ciStreams.cpp:339
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/localhome/davids/hotspot/valhalla_sync_branches/open/src/hotspot/share/ci/ciStreams.cpp:339), pid=25060, tid=25073
# Error: ShouldNotReachHere()
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (slowdebug build 13-lworldea+0-2019-01-31-0927445.davids.null)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 13-lworldea+0-2019-01-31-0927445.davids.null, mixed mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x789eb2] ciBytecodeStream::get_method_index()+0x2c
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1/core.25060)
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1/hs_err_pid25060.log
#
# Compiler replay data is saved as:
# /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1/replay_pid25060.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 25073
Dumping core ...
STDERR:
rerun:
cd /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/scratch/1 && \
DISPLAY=:1 \
GNOME_DESKTOP_SESSION_ID=this-is-deprecated \
HOME=/home/davids \
JDK8_HOME=/var/tmp/jib-davids/install/jdk/11/28/bundles/linux-x64/jdk-11_linux-x64_bin.tar.gz/jdk-11 \
JIB_HOME=/var/tmp/jib-davids/install/com/oracle/java/jib/jib/3.0-SNAPSHOT/jib-3.0-SNAPSHOT-distribution.zip/jib-3.0-SNAPSHOT-distribution \
LANG=en_AU.UTF-8 \
PATH=/bin:/usr/bin \
TEST_IMAGE_GRAAL_DIR=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/test/hotspot/jtreg/graal \
XMODIFIERS=@im=ibus \
CLASSPATH=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/open/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg:/var/tmp/jib-davids/install/java/re/jtreg/4.2/promoted/all/b13/bundles/jtreg_bin-4.2.zip/jtreg/lib/javatest.jar:/var/tmp/jib-davids/install/java/re/jtreg/4.2/promoted/all/b13/bundles/jtreg_bin-4.2.zip/jtreg/lib/jtreg.jar \
/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/jdk/bin/java \
-Dtest.class.path.prefix=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3 \
-Dtest.src=/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes \
-Dtest.src.path=/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/valhalla/valuetypes:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/open/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/open/test/hotspot/jtreg \
-Dtest.classes=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d \
-Dtest.class.path=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/valhalla/valuetypes/TestNewAcmp.d:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/testlibrary:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/test/lib:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3/compiler/whitebox:/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/classes/3 \
-Dtest.vm.opts=-XX:MaxRAMPercentage=1 \
-Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=1 \
-Dtest.compiler.opts= \
-Dtest.java.opts= \
-Dtest.jdk=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/jdk \
-Dcompile.jdk=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/jdk \
-Dtest.timeout.factor=4.0 \
-Dtest.nativepath=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/test/hotspot/jtreg/native \
-XX:MaxRAMPercentage=1 \
-Djava.library.path=/localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/images/test/hotspot/jtreg/native \
-Xbootclasspath/a:. \
-XX:+UnlockDiagnosticVMOptions \
-XX:+WhiteBoxAPI \
-Xbatch \
-XX:+EnableValhalla \
-XX:TypeProfileLevel=222 \
-XX:+UnlockExperimentalVMOptions \
-XX:ACmpOnValues=3 \
-XX:CompileCommand=dontinline,compiler.valhalla.valuetypes.TestNewAcmp::test* \
-XX:CompileCommand=dontinline,compiler.valhalla.valuetypes.TestNewAcmp::cmp* \
com.sun.javatest.regtest.agent.MainWrapper /localhome/davids/hotspot/valhalla_sync_branches/build/linux-x64-slowdebug/test-support/jtreg_open_test_hotspot_jtreg_hotspot_valhalla/compiler/valhalla/valuetypes/TestNewAcmp.d/main.6.jta 0
TEST RESULT: Failed. Unexpected exit from test [exit code: 134]
- relates to
-
JDK-8215473 [lworld] Support for substitutability checks in C2
-
- Resolved
-