8218143: Merge with main, fails compiler/valhalla/valuetypes/TestNewAcmp.java

Reviewed-by: thartmann